[package]
name = "ripntear"
description = "8051 disassembler"
version = "0.1.0"
authors = ["Erin Moon <erin@hecke.rs>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.31"
num_enum = "0.5.0"
bitflags = "1.2.1"
structopt = "0.3.15"
